[fix] 1.0.4