@@ -1,13 +1,7 @@
 package com.wu.framework.easy.excel.web;
 
-import com.wu.framework.easy.excel.adapter.ExcelExcelServiceAdapter;
-import com.wu.framework.easy.excel.endpoint.EasyExcelPoint;
-import com.wu.framework.easy.excel.endpoint.convert.EasyExcelPointConvert;
+import com.wu.framework.easy.excel.service.ExcelExcelService;
 import com.wu.framework.easy.excel.stereotype.EasyExcel;
-import com.wu.framework.easy.excel.toolkit.DynamicEasyExcelContextHolder;
-import com.wu.framework.easy.excel.toolkit.DynamicEasyExcelPointContextHolder;
-import com.wu.framework.inner.layer.data.NormalUsedString;
-import com.wu.framework.inner.layer.toolkit.DynamicLazyAttributeContextHolder;
 import org.springframework.core.MethodParameter;
 import org.springframework.core.annotation.AnnotatedElementUtils;
 import org.springframework.http.HttpHeaders;
@@ -15,7 +9,6 @@ import org.springframework.http.MediaType;
 import org.springframework.http.converter.HttpMessageConverter;
 import org.springframework.http.server.ServerHttpRequest;
 import org.springframework.http.server.ServerHttpResponse;
-import org.springframework.util.ObjectUtils;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseBodyAdvice;
 
@@ -35,13 +28,7 @@ import java.util.Objects;
  */
 @RestControllerAdvice
 public class ExcelResponseHandler implements ResponseBodyAdvice<Object> {
-    private final ExcelExcelServiceAdapter excelExcelServiceAdapter;
 
-    protected EasyExcelPointConvert excelPointConvert = new EasyExcelPointConvert();
-
-    public ExcelResponseHandler(ExcelExcelServiceAdapter excelExcelServiceAdapter) {
-        this.excelExcelServiceAdapter = excelExcelServiceAdapter;
-    }
 
     @Override
     public boolean supports(MethodParameter methodParameter, Class<? extends HttpMessageConverter<?>> aClass) {
@@ -54,15 +41,6 @@ public class ExcelResponseHandler implements ResponseBodyAdvice<Object> {
                                   MediaType mediaType, Class<? extends HttpMessageConverter<?>> aClass,
                                   ServerHttpRequest serverHttpRequest, ServerHttpResponse serverHttpResponse) {
         EasyExcel easyExcel = AnnotatedElementUtils.findMergedAnnotation(Objects.requireNonNull(methodParameter.getMethod()), EasyExcel.class);
-
-        EasyExcelPoint easyExcelPoint = excelPointConvert.converter(easyExcel);
-
-        EasyExcelPoint peek = DynamicEasyExcelPointContextHolder.peek();
-        easyExcelPoint = ObjectUtils.isEmpty(peek) ? easyExcelPoint : peek;
-
-        String fileName = easyExcelPoint.getFileName();
-        String suffix = easyExcelPoint.getSuffix();
-        DynamicEasyExcelPointContextHolder.clear();
         Collection collection;
         if (o instanceof Collection) {
             collection = (Collection) o;
@@ -73,13 +51,16 @@ public class ExcelResponseHandler implements ResponseBodyAdvice<Object> {
         HttpHeaders headers = serverHttpResponse.getHeaders();
         headers.add("Cache-Control", "no-cache, no-store, must-revalidate");
         String encodedFileName = null;
-        encodedFileName = java.net.URLEncoder.encode(fileName, StandardCharsets.UTF_8);
-        headers.add("Content-Disposition", String.format("attachment; filename=\"%s.%s\"; filename*=utf-8''%s.%s", encodedFileName, suffix, encodedFileName, suffix));
-        headers.add("File-Name", encodedFileName + NormalUsedString.DOT + suffix);
-        headers.add(HttpHeaders.PRAGMA, "no-cache");
-        headers.add(HttpHeaders.EXPIRES, "0");
-        headers.add(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_OCTET_STREAM_VALUE);
-        byte[] bytes = excelExcelServiceAdapter.exportExcel(collection, easyExcelPoint);
+        try {
+            encodedFileName = java.net.URLEncoder.encode(easyExcel.fileName(), StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
+        headers.add("Content-Disposition", String.format("attachment; filename=\"%s.%s\"; filename*=utf-8''%s.%s", encodedFileName, easyExcel.suffix(), encodedFileName, easyExcel.suffix()));
+        headers.add("Pragma", "no-cache");
+        headers.add("Expires", "0");
+        headers.add("Content-Type", MediaType.APPLICATION_OCTET_STREAM_VALUE);
+        byte[] bytes = ExcelExcelService.exportExcel(easyExcel, collection);
         try {
             OutputStream body = serverHttpResponse.getBody();
             body.write(bytes);
@@ -87,8 +68,6 @@ public class ExcelResponseHandler implements ResponseBodyAdvice<Object> {
             body.close();
         } catch (IOException e) {
             e.printStackTrace();
-        } finally {
-            DynamicEasyExcelContextHolder.clearALL();
         }
         return o;
     }
